kube/charts/base/ci/rs-ingresses-result.yaml
---
# Source: base-test/templates/loader.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-release
  namespace: default
spec:
  rules:
  - host: myapp.example.com
    http:
      paths:
      - backend:
          service:
            name: myapp
            port:
              number: 80
        path: /
        pathType: Prefix
